acerca de terminado

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,4 +10,10 @@
         android:name="com.example.guth.Fragments.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
+
+    <fragment
+        android:id="@+id/nav_acerca"
+        android:name="com.example.guth.Fragments.AcercaFragment"
+        android:label="@string/menu_acerca"
+        tools:layout="@layout/acerca_fragment" />
 </navigation>
