--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,5 +8,9 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
+        <item
+            android:id="@+id/nav_acerca"
+            android:icon="@drawable/ic_menu_about"
+            android:title="@string/menu_acerca" />
     </group>
 </menu>
